--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="container-padding">
                 r1c1
             </div>
-            <div onmouseleave="greeter.resetGreeting()" onmouseenter=greeter.showGreeting()" id="r1c2"
+            <div onmouseleave="greeter.resetGreeting()" onmouseenter="greeter.showGreeting()" id="r1c2"
                 class="container-padding">
                 r1c2
             </div>
